# SnapDocs-1

./: .dockerignore  Docker-compose.yaml  Dockerfile  backend.sh  docker-compose.yaml  index.html  package.json  shell.sh
auth-service/: .env  Dockerfile  pyproject.toml
auth-service/app/: database.py  main.py  routes.py
backend/: .env  Dockerfile  docker-compose.yaml  pyproject.toml
backend/app/: auth.py  database.py  db.py  main.py  models.py  schemas.py  schems.py
backend/auth/: .env  Dockerfile  poetry.toml  pyproject.toml
backend/auth/app/: db.py  main.py  schemas.py  security.py
db/: Dockerfile  init.sql
deploy/: nginx.conf
frontend/: .env.production  Dockerfile
frontend/deploy/: nginx.conf
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.js
frontend/src/components/: AuthModal.css  AuthModal.jsx  Authmodal.jsx  Header.css  Header.jsx
frontend/src/lib/: auth.js
frontend/src/pages/: AppPage.jsx  HomeIntro.css  HomeIntro.jsx
src/: App.jsx
src/components/: Header.css  Header.jsx
src/components/Homepage/: Homepage.jsx
src/pages/: HomeIntro.css  HomeIntro.jsx
