[tool.poetry]
name = "docuvault-backend"
version = "0.1.0"
description = "Backend authentication service for DocuVault"
authors = ["Gonepudi Srinivas <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
SQLAlchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.2.0"
pydantic = "^2.8.2"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
