[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "SnapDocs auth microservice (FastAPI + MongoDB) using Poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

# we don't need to package the project; see poetry.toml

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.14"
uvicorn = {version = "0.30.6", extras = ["standard"]}
motor = "3.7.1"
pymongo = "4.14.0"
pydantic = {version = "2.11.7", extras = ["email"]}
email-validator = "2.2.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "4.3.0"
PyJWT = "2.10.1"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
# add dev tools here if you want

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
