[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Auth microservice for signup/login with MongoDB"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pymongo = "^4.7.0"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
